# aws-sdk-cpp

./: .gitmodules  CMakeLists.txt
aws-cpp-sdk-access-management/: CMakeLists.txt
aws-cpp-sdk-cognito-identity/: CMakeLists.txt
aws-cpp-sdk-core/: CMakeLists.txt
aws-cpp-sdk-iam/: CMakeLists.txt
aws-cpp-sdk-kinesis/: CMakeLists.txt
aws-cpp-sdk-lambda/: CMakeLists.txt
aws-cpp-sdk-sns/: CMakeLists.txt
cmake/: AwsSharedLibSetup.cmake  setup_cmake_find_module.cmake  utilities.cmake
cmake/aws-c-common/: CMakeLists.txt
cmake/aws-c-event-stream/: CMakeLists.txt
cmake/aws-checksums/: CMakeLists.txt
